--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="clock">
-        head
+    <div id="clock">
+        <div id="hours"></div>
+        <div id="minutes"></div>
+        <div id="seconds"></div>
     </div>
     
 </body>
